RCS-42 Some fixes